--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "@fortawesome/react-fontawesome": "^0.1.4",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-scripts": "3.1.0"
+    "react-scripts": "3.1.0",
+    "react-scroll": "^1.7.13"
   },
   "scripts": {
     "start": "react-scripts start",
